tests/errors/syntactic_error_4.fm
PASTA_RAIZ "/home/jotavin/Downloads"
REGRA SE $EXTENSAO EH ENTAO MOVER_PARA "/home/jotavin/Downloads/Relatorios" // Falta o valor para a comparação
